Fixed section edit links wrapping

--- a/assets/wiki.css
+++ b/assets/wiki.css
@@ -4,6 +4,7 @@
     margin-left: 10px;
     color: #000;
     opacity: 0.6;
+    white-space: nowrap;
 }
 .wiki-section-edit a {
 }
